# meta-rust-test

./: Cargo.toml  meta-rust-test_0.1.0.bb
